# devworkspace-manager

./: CMakeLists.txt  README.md  main.cpp  main.h
src/scan_dir/: NewWayToScanDirectory.cpp  NewWayToScanDirectory.h  OldWayToScanDirectory.cpp  OldWayToScanDirectory.h  Util.cpp  Util.h  main.cpp  main.h  new_way_to_scan_directory.cpp  new_way_to_scan_directory.h  old_way_to_scan_directory.cpp  old_way_to_scan_directory.h  util.cpp  util.h
src/scan_dir/classes/: Directory.cpp  Directory.h  FileSystemEntry.cpp  FileSystemEntry.h  RegularFile.cpp  RegularFile.h  SymbolicLink.cpp  SymbolicLink.h
